--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,45 @@
-body {
+.container {
   margin: auto;
   width: 90%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(auto, auto);
+  gap: 1px;
+}
+
+.header {
+grid-column: 1/5;
+grid-row: 1/2;
+height: 1em;
+border: 1px solid blue;
+}
+
+#img-container {
+  grid-column: 2/5;
+  grid-row: 2/3;
+  border: 10px solid red;
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(auto, auto);
+  gap: 1px;
+}
+
+#show-results-btn {
+  /* width: max-content; */
+  color: aqua;
+  background-color: blue;
+  grid-column: 1/2;
+  grid-row: 2/4;
+  border: 5px solid green;
+}
+
+.footer {
+  grid-column: 1/5;
+  grid-row: 5/6;
+  border: 1px solid purple;
 }
 
 img {
   height: 200px;
   width: 200px;
-}
-
-#show-results-btn {
-  width: max-content;
-  color: aqua;
-  background-color: blue;
-  position: relative;
 }
