--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,40 @@
-.container {
-  margin: auto;
-  width: 90%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(auto, auto);
-  gap: 1px;
-}
-
-.header {
-grid-column: 1/5;
-grid-row: 1/2;
-height: 1em;
-border: 1px solid blue;
-}
-
-#img-container {
-  grid-column: 2/5;
-  grid-row: 2/3;
-  border: 10px solid red;
-  display: flex;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(auto, auto);
-  gap: 1px;
-}
-
-#show-results-btn {
-  /* width: max-content; */
-  color: aqua;
-  background-color: blue;
-  grid-column: 1/2;
-  grid-row: 2/4;
-  border: 5px solid green;
-}
-
-.footer {
-  grid-column: 1/5;
-  grid-row: 5/6;
-  border: 1px solid purple;
-}
-
 img {
   height: 200px;
   width: 200px;
+}
+
+.content-body {
+  display: flex;
+  flex-direction: row;
+}
+
+#img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1em;
+}
+
+h1 {
+  font-size: 30pt;
+  text-align: center;
+  color: cornflowerblue;
+  padding: .5em;
+}
+
+body {
+  margin: auto;
+  width: 90%;
+  border: 1px solid black;
+}
+
+#show-results-btn {
+  color: blue;
+  background-color: aquamarine;
+  width: 145px;
+  font-size: 20pt;
+}
+
+.graph-container {
+  width: 80%;
 }
